@startuml

abstract class "Média" as M{
    # titre : chaine
    # duréeEmprunt : entier
    # statut : chaine
    # dateCréation : chaine
}

class "Livre" as L{
    - isbn : chaine
    - auteur : chaine
    - nbPages : entier
}

class "Blu-Ray" as BR{
    - réalisateur : chaine
    - durée : chaine
    - anneeSortie : chaine
}

class "Magazine" as Ma{
    - numéroMagazine : entier
    - dateParution : chaine
}

class "Adhérent" as A{
    - numeroAdherent : chaine
    - prenom : chaine
    - nom : chaine
    - email : chaine
    - dateAdhésion : date
    - genererNumero() : chaine
}

class "Emprunt" as E{
    - numéroEmprunt : entier
    - dateEmprunt : date
    - dateRetourEstimée : date
    - dateRetourReel : date
}

M <|-- L
M <|-- BR
M <|-- Ma
M "1..1" <-- "              0..*"E : est emprunté >
A "1..1" <-- "0..*"E : emprunte >



@enduml